# nlist

./: .gitignore  Cargo.toml  Changelog.md  LICENSE-ZLIB.md  README.md
.github/workflows/: rust.yml
src/: bit.rs  boolean.rs  imply_trait.rs  int.rs  lib.rs  macros.rs  nlist.rs  peano.rs  receiver.rs  tordering.rs
src/bit/: bit_wit.rs  type_fns.rs
src/boolean/: type_fns.rs
src/int/: from_const.rs  int_types.rs  int_wit.rs  pair_of_ints.rs  proofs.rs  type_fns.rs
src/macros/: destructuring_macros.rs  from_fn_macro.rs  internal_macros.rs  iterator_macros.rs
src/nlist/: flatten.rs  indexing.rs  iteratorlike.rs  splitting.rs
src/peano/: from_const.rs  pair_of_peanos.rs  peano_wit.rs  proofs.rs  std_impls.rs  type_fns.rs
src/receiver/: type_fns.rs
tests/: test_modules.rs
tests/misc_tests/: boolean_tests.rs  destructuring_macro_tests.rs  nlist_type_tests.rs  peano_tests.rs  receiver_tests.rs  test_utils.rs  ui_tests.rs
tests/misc_tests/boolean_tests/: boolean_ops_tests.rs
tests/misc_tests/nlist_type_tests/: nlist_comparison_tests.rs  nlist_constructor_tests.rs  nlist_getters_tests.rs  nlist_indexing_and_recombining_tests.rs  nlist_iterator_methods_tests.rs  nlist_len_methods_tests.rs  nlist_misc_tests.rs
tests/misc_tests/nlist_ui_tests/: index_mut_err.rs  index_mut_err.stderr  nlist_pat_by_value_in_const_fn_err.rs  nlist_pat_by_value_in_const_fn_err.stderr  nlist_pat_rem_in_middle_err.rs  nlist_pat_rem_in_middle_err.stderr  split_at_err.rs  split_at_err.stderr  unlist_rem_in_middle_err.rs  unlist_rem_in_middle_err.stderr
tests/misc_tests/peano_tests/: peano_int_ops_tests.rs  peano_int_proofs_tests.rs  peano_int_tests.rs
