[package]
name = "nlist"
version = "0.0.4"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.83.0"
edition = "2021"
license = "Zlib"
description = "inline-allocated list with statically tracked length"
documentation = "https://docs.rs/nlist/"
readme="./README.md"
keywords = ["GADT", "type_witness", "no_std", "list", "data-structure"]
categories = ["no-std", "data-structures"]
repository = "https://github.com/rodrimati1992/nlist/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "LICENSE-ZLIB.md", 
]


[features]
default = ["alloc"]
alloc = ["typewit/alloc"]
__ui = []

[dependencies.konst]
version = "0.3.12"
features = ["rust_1_83"]
default-features = false

[dependencies.typewit]
version = "1.10.1"
features = ["mut_refs"]
default-features = false

[dependencies.const_panic]
version = "0.2"
default-features = false

[dev-dependencies.trybuild]
version = "1.0"








